Fixed overlapping in projects section.

--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,7 @@ p.about-subtitle {
 
 .project-container {
   margin: 0 1em;
+  height: max-content;
 }
 
 .project-pic {
